<resources>
	<string name="app_name">My Application</string>

	<string name="login_linear_username">Please enter your username</string>
	<string name="login_linear_pass">Please enter your password...</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

	<string name="login_fragment_title">Login In Page</string>
	<string name="login_fragment_hint_username">Enter username</string>
	<string name="login_fragment_hint_password">Enter pass</string>
	<string name="login_fragment_button">Login</string>
</resources>