<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:context=".fragment.LoginFragment">

	<TextView
		android:id="@+id/fr_login_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_fragment_title"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/fr_login_username_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:hint="@string/login_fragment_hint_username"
		app:layout_constraintTop_toBottomOf="@id/fr_login_title">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/fr_login_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</com.google.android.material.textfield.TextInputLayout>

	<Space
		android:id="@+id/fr_layout_space"
		android:layout_width="match_parent"
		android:layout_height="4dp"
		app:layout_constraintTop_toBottomOf="@id/fr_login_username_layout" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/fr_login_password_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/login_fragment_hint_password"
		app:layout_constraintTop_toBottomOf="@id/fr_layout_space">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/fr_login_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/fr_login_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/login_fragment_button"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/fr_login_password_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>